clusters/app.ci/assets/dptp-controller-manager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    keel.sh/policy: force
    keel.sh/matchTag: "true"
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@every 5m"
  labels:
    app: dptp-controller-manager
  name: dptp-controller-manager
  namespace: ci
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dptp-controller-manager
  template:
    metadata:
      annotations:
        ci-workload-autoscaler.openshift.io/scale: "false"
      labels:
        app: dptp-controller-manager
    spec:
      tolerations:
      - key: manual-provision
        operator: Exists
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            preference:
              matchExpressions:
              - key: node.kubernetes.io/instance-type
                operator: NotIn
                values:
                - r5.4xlarge
      containers:
      - name: git-sync
        command:
        - /git-sync
        args:
        - --repo=https://github.com/openshift/release.git
        - --ref=main
        - --period=30s
        - --root=/tmp/git-sync
        - --max-failures=3
        - --link=release
        image: quay-proxy.ci.openshift.org/openshift/ci:ci_git-sync_v4.3.0
        imagePullPolicy: Always
        volumeMounts:
        - name: release
          mountPath: /tmp/git-sync
        resources:
          requests:
            memory: "256Mi"
            cpu: "0.5"
          limits:
            memory: "2Gi"
      - image: quay-proxy.ci.openshift.org/openshift/ci:ci_dptp-controller-manager_latest
        name: dptp-controller-manager
        imagePullPolicy: Always
        args:
        - --leader-election-namespace=ci
        - --release-repo-git-sync-path=/var/repo/release
        - --github-endpoint=http://ghproxy
        - --github-endpoint=https://api.github.com
        - --github-graphql-endpoint=http://ghproxy/graphql
        - --github-token-path=/etc/github/oauth
        - --github-hourly-tokens=4000
        - --github-allowed-burst=2000
        - --registry-cluster-name=app.ci
        - --enable-controller=promotionreconciler
        - --enable-controller=serviceaccount_secret_refresher
        - --serviceAccountRefresherOptions.enabled-namespace=ci
        - --serviceAccountRefresherOptions.enabled-namespace=bparees
        - --serviceAccountRefresherOptions.ignore-service-account=ci/config-updater
        - --serviceAccountRefresherOptions.ignore-service-account=ci/sync-rover-groups-updater
        - --serviceAccountRefresherOptions.remove-old-secrets=true
        - --enable-controller=testimagestreamimportcleaner
        - --dry-run=false
        - --kubeconfig-dir=/var/kubeconfigs
        - --kubeconfig-suffix=config
        ports:
        - name: metrics
          containerPort: 8080
        volumeMounts:
        - name: oauth
          mountPath: /etc/github
          readOnly: true
        - name: kubeconfigs
          mountPath: /var/kubeconfigs
        - name: release
          mountPath: /var/repo
        - name: ci-secret-bootstrap
          mountPath: /etc/ci-secret-bootstrap
          readOnly: true
        - name: secret-mirroring
          mountPath: /etc/secret-mirroring
          readOnly: true
        resources:
          limits:
            memory: "48Gi"
          requests:
            memory: "24Gi"
            cpu: "1"
      serviceAccountName: dptp-controller-manager
      volumes:
      - name: oauth
        secret:
          secretName: github-credentials-openshift-merge-robot
      - name: kubeconfigs
        secret:
          secretName: dptp-controller-manager
      - name: release
        emptyDir: {}
      - name: ci-secret-bootstrap
        configMap:
          name: ci-secret-bootstrap
      - name: secret-mirroring
        configMap:
          name: secret-mirroring
