clusters/app.ci/assets/admin_qci-appci.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: ci
  name: qci-appci
spec:
  selector:
    app: qci-appci
  ports:
  - name: http
    port: 8400
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: cert-issuer
    route.openshift.io/termination: passthrough
  name: qci-appci
  namespace: ci
spec:
  ingressClassName: openshift-default
  tls:
    - secretName: qci-appci-tls
      hosts:
        - quay-proxy.ci.openshift.org
  rules:
  - host: quay-proxy.ci.openshift.org
    http:
      paths:
      - backend:
          service:
            name: qci-appci
            port:
              number: 8400
        pathType: ImplementationSpecific
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    keel.sh/policy: force
    keel.sh/matchTag: "true"
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@every 5m"
  labels:
    app: qci-appci
  name: qci-appci
  namespace: ci
spec:
  replicas: 5
  selector:
    matchLabels:
      app: qci-appci
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: qci-appci
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - qci-appci
              topologyKey: "kubernetes.io/hostname"
      containers:
      - name: qci-appci
        image: quay-proxy.ci.openshift.org/openshift/ci:ci_qci-appci_latest
        imagePullPolicy: Always
        args:
        - -listen-addr=0.0.0.0:8400
        - -tls-cert-file=/var/run/serving-cert/tls.crt
        - -tls-key-file=/var/run/serving-cert/tls.key
        - -robot-username-file=/etc/qci-robot-credentials/username
        - -robot-password-file=/etc/qci-robot-credentials/password
        - -token-secret-file=/etc/qci-appci-credentials/token
        - -exposed-host=quay-proxy.ci.openshift.org
        ports:
        - name: http
          containerPort: 8400
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8400
            scheme: HTTPS
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8400
            scheme: HTTPS
        resources:
          requests:
            memory: "1Gi"
            cpu: "50m"
          limits:
            memory: "1Gi"
        volumeMounts:
        - name: serving-cert
          mountPath: /var/run/serving-cert
        - name: qci-robot-credentials
          mountPath: /etc/qci-robot-credentials
        - name: qci-appci-credentials
          mountPath: /etc/qci-appci-credentials
      serviceAccountName: qci-appci
      volumes:
      - name: serving-cert
        secret:
          secretName: qci-appci-tls
      - name: qci-robot-credentials
        secret:
          secretName: qci-robot-credentials
      - name: qci-appci-credentials
        secret:
          secretName: qci-appci-credentials
